--- a/index.html
+++ b/index.html
@@ -118,3 +118,15 @@
 </body>
 </html>
 
+    <!-- Bottom Navigation -->
+    <nav class="py-6 flex justify-between items-center bg-black bg-opacity-50 text-white" aria-label="Bottom Navigation">
+        <div class="text-xl font-bold">Logo</div>
+        <ul class="flex space-x-6">
+            <li><a href="#about" class="hover:underline" aria-label="About Us">About Us</a></li>
+            <li><a href="#work" class="hover:underline" aria-label="Our Work">Our Work</a></li>
+            <li><a href="#prices" class="hover:underline" aria-label="Prices">Prices</a></li>
+            <li><a href="contact.html" class="hover:underline" aria-label="Contact">Contact</a></li>
+        </ul>
+    </nav>
+</body>
+</html>
