--- a/contact.html
+++ b/contact.html
@@ -3,126 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional One Page Website</title>
+    <title>Contact Us</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <meta name="description" content="Professional one-page website for showcasing services and work.">
-    <meta name="keywords" content="professional, services, portfolio, projects, prices">
-    <meta name="author" content="Your Company Name">
     <style>
-        .bg-river {
-            background-image: url('https://source.unsplash.com/random/1920x1080?river');
-            background-size: cover;
-            background-position: center;
-        }
         html {
             scroll-behavior: smooth;
         }
         nav a:hover {
             text-decoration: underline;
         }
-        .tiffany-shadow {
-            background-color: #0ABAB5;
-            border-radius: 50%;
-            padding: 20px;
-            display: inline-block;
-        }
     </style>
 </head>
 <body class="font-sans antialiased text-gray-900">
-    <!-- Intro Section -->
-    <header class="bg-river h-screen flex items-center justify-center text-white">
-        <nav class="absolute top-0 left-0 right-0 p-6 flex justify-between items-center bg-black bg-opacity-50" aria-label="Main Navigation">
-            <div class="text-xl font-bold">Logo</div>
-            <ul class="flex space-x-6">
-                <li><a href="#about" class="hover:underline" aria-label="About Us">About Us</a></li>
-                <li><a href="#work" class="hover:underline" aria-label="Our Work">Our Work</a></li>
-                <li><a href="#prices" class="hover:underline" aria-label="Prices">Prices</a></li>
-                <li><a href="contact.html" class="hover:underline" aria-label="Contact">Contact</a></li>
-            </ul>
-        </nav>
-        <div class="text-center">
-            <h1 class="text-5xl md:text-7xl font-bold">Welcome to Our Professional Site</h1>
-            <p class="mt-4 text-xl md:text-2xl">Delivering quality work every time</p>
-        </div>
-    </header>
+    <!-- Navigation -->
+    <nav class="p-6 flex justify-between items-center bg-gray-800 text-white" aria-label="Main Navigation">
+        <div class="text-xl font-bold">Logo</div>
+        <ul class="flex space-x-6">
+            <li><a href="index.html#about" class="hover:underline" aria-label="About Us">About Us</a></li>
+            <li><a href="index.html#work" class="hover:underline" aria-label="Our Work">Our Work</a></li>
+            <li><a href="index.html#prices" class="hover:underline" aria-label="Prices">Prices</a></li>
+            <li><a href="contact.html" class="hover:underline" aria-label="Contact">Contact</a></li>
+        </ul>
+    </nav>
 
-    <!-- About Us Section -->
-    <section id="about" class="py-20 bg-white">
+    <!-- Contact Section -->
+    <section id="contact" class="py-20 bg-gray-100">
         <div class="container mx-auto px-6">
-            <h2 class="text-4xl font-bold text-center">About Us</h2>
-            <p class="mt-6 text-lg text-center max-w-2xl mx-auto">We are a team of professionals dedicated to providing the best service in the industry. Our mission is to deliver top-notch quality and ensure customer satisfaction.</p>
-        </div>
-    </section>
-
-    <!-- Owner Section -->
-    <section class="py-20 bg-gray-100">
-        <div class="container mx-auto px-6 text-center">
-            <div class="tiffany-shadow inline-block">
-                <img src="https://source.unsplash.com/random/200x200?woman" alt="Grace" class="rounded-full w-48 h-48 object-cover">
-            </div>
-            <h3 class="text-2xl font-bold mt-4">Grace</h3>
-            <p class="text-gray-600">Owner/Developer</p>
-        </div>
-    </section>
-
-    <!-- Our Work Section -->
-    <section id="work" class="py-20 bg-gray-100">
-        <div class="container mx-auto px-6">
-            <h2 class="text-4xl font-bold text-center">Our Work</h2>
-            <div class="mt-12 grid gap-8 md:grid-cols-3">
-                <!-- Card 1 -->
-                <div class="bg-white p-6 rounded-lg shadow-lg">
-                    <h3 class="text-2xl font-bold mb-4">Project 1</h3>
-                    <p class="text-gray-600">Description of the project goes here. Highlight key features and success stories.</p>
+            <h2 class="text-4xl font-bold text-center">Contact Us</h2>
+            <form class="mt-12 max-w-xl mx-auto">
+                <div class="mb-6">
+                    <label for="name" class="block mb-2 text-sm font-medium text-gray-700">Name</label>
+                    <input type="text" id="name" class="w-full p-3 border border-gray-300 rounded-lg" required>
                 </div>
-                <!-- Card 2 -->
-                <div class="bg-white p-6 rounded-lg shadow-lg">
-                    <h3 class="text-2xl font-bold mb-4">Project 2</h3>
-                    <p class="text-gray-600">Description of the project goes here. Highlight key features and success stories.</p>
+                <div class="mb-6">
+                    <label for="email" class="block mb-2 text-sm font-medium text-gray-700">Email</label>
+                    <input type="email" id="email" class="w-full p-3 border border-gray-300 rounded-lg" required>
                 </div>
-                <!-- Card 3 -->
-                <div class="bg-white p-6 rounded-lg shadow-lg">
-                    <h3 class="text-2xl font-bold mb-4">Project 3</h3>
-                    <p class="text-gray-600">Description of the project goes here. Highlight key features and success stories.</p>
+                <div class="mb-6">
+                    <label for="message" class="block mb-2 text-sm font-medium text-gray-700">Message</label>
+                    <textarea id="message" class="w-full p-3 border border-gray-300 rounded-lg" rows="5" required></textarea>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Prices Section -->
-    <section id="prices" class="py-20 bg-white">
-        <div class="container mx-auto px-6">
-            <h2 class="text-4xl font-bold text-center">Prices</h2>
-            <div class="mt-12 grid gap-8 md:grid-cols-3">
-                <!-- Price Card 1 -->
-                <div class="bg-gray-100 p-6 rounded-lg shadow-lg text-center">
-                    <h3 class="text-2xl font-bold mb-4">Basic Plan</h3>
-                    <p class="text-4xl font-bold mb-4">$99</p>
-                    <p class="text-gray-600">Includes basic features and support.</p>
-                </div>
-                <!-- Price Card 2 -->
-                <div class="bg-gray-100 p-6 rounded-lg shadow-lg text-center">
-                    <h3 class="text-2xl font-bold mb-4">Standard Plan</h3>
-                    <p class="text-4xl font-bold mb-4">$199</p>
-                    <p class="text-gray-600">Includes standard features and priority support.</p>
-                </div>
-                <!-- Price Card 3 -->
-                <div class="bg-gray-100 p-6 rounded-lg shadow-lg text-center">
-                    <h3 class="text-2xl font-bold mb-4">Premium Plan</h3>
-                    <p class="text-4xl font-bold mb-4">$299</p>
-                    <p class="text-gray-600">Includes all features and dedicated support.</p>
-                </div>
-            </div>
+                <button type="submit" class="w-full p-3 bg-blue-600 text-white rounded-lg">Send Message</button>
+            </form>
         </div>
     </section>
 
     <!-- Bottom Navigation -->
-    <nav class="py-6 flex justify-between items-center bg-black bg-opacity-50 text-white" aria-label="Bottom Navigation">
+    <nav class="py-6 flex justify-between items-center bg-gray-800 text-white" aria-label="Bottom Navigation">
         <div class="text-xl font-bold">Logo</div>
         <ul class="flex space-x-6">
-            <li><a href="#about" class="hover:underline" aria-label="About Us">About Us</a></li>
-            <li><a href="#work" class="hover:underline" aria-label="Our Work">Our Work</a></li>
-            <li><a href="#prices" class="hover:underline" aria-label="Prices">Prices</a></li>
+            <li><a href="index.html#about" class="hover:underline" aria-label="About Us">About Us</a></li>
+            <li><a href="index.html#work" class="hover:underline" aria-label="Our Work">Our Work</a></li>
+            <li><a href="index.html#prices" class="hover:underline" aria-label="Prices">Prices</a></li>
             <li><a href="contact.html" class="hover:underline" aria-label="Contact">Contact</a></li>
         </ul>
     </nav>
