--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,11 @@
 <body class="font-sans antialiased text-gray-900">
     <!-- Navigation -->
     <nav class="p-6 flex justify-between items-center bg-gray-800 text-white" aria-label="Main Navigation">
-        <div class="text-xl font-bold">Logo</div>
+        <div class="text-xl font-bold">
+            <img src="https://source.unsplash.com/random/100x100?logo" alt="Logo" class="w-10 h-10 inline-block">
+        </div>
         <ul class="flex space-x-6">
+            <li><a href="index.html#home" class="hover:underline" aria-label="Home">Home</a></li>
             <li><a href="index.html#about" class="hover:underline" aria-label="About Us">About Us</a></li>
             <li><a href="index.html#work" class="hover:underline" aria-label="Our Work">Our Work</a></li>
             <li><a href="index.html#prices" class="hover:underline" aria-label="Prices">Prices</a></li>
@@ -50,8 +53,11 @@
 
     <!-- Bottom Navigation -->
     <nav class="py-6 flex justify-between items-center bg-gray-800 text-white" aria-label="Bottom Navigation">
-        <div class="text-xl font-bold">Logo</div>
+        <div class="text-xl font-bold">
+            <img src="https://source.unsplash.com/random/100x100?logo" alt="Logo" class="w-10 h-10 inline-block">
+        </div>
         <ul class="flex space-x-6">
+            <li><a href="index.html#home" class="hover:underline" aria-label="Home">Home</a></li>
             <li><a href="index.html#about" class="hover:underline" aria-label="About Us">About Us</a></li>
             <li><a href="index.html#work" class="hover:underline" aria-label="Our Work">Our Work</a></li>
             <li><a href="index.html#prices" class="hover:underline" aria-label="Prices">Prices</a></li>
