--- a/civicrm.html
+++ b/civicrm.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>CiviCRM Integrations</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
         html {
@@ -31,27 +31,33 @@
 </nav>
 
 
-    <!-- Contact Section -->
-    <section id="contact" class="py-20 bg-gray-100">
+    <!-- CiviCRM Section -->
+    <section id="civicrm" class="py-20 bg-white">
         <div class="container mx-auto px-6">
-            <h2 class="text-4xl font-bold text-center">Contact Us</h2>
-            <form class="mt-12 max-w-xl mx-auto">
-                <div class="mb-6">
-                    <label for="name" class="block mb-2 text-sm font-medium text-gray-700">Name</label>
-                    <input type="text" id="name" class="w-full p-3 border border-gray-300 rounded-lg" required>
-                </div>
-                <div class="mb-6">
-                    <label for="email" class="block mb-2 text-sm font-medium text-gray-700">Email</label>
-                    <input type="email" id="email" class="w-full p-3 border border-gray-300 rounded-lg" required>
-                </div>
-                <div class="mb-6">
-                    <label for="message" class="block mb-2 text-sm font-medium text-gray-700">Message</label>
-                    <textarea id="message" class="w-full p-3 border border-gray-300 rounded-lg" rows="5" required></textarea>
-                </div>
-                <button type="submit" class="w-full p-3 bg-blue-600 text-white rounded-lg">Send Message</button>
-            </form>
+            <h2 class="text-4xl font-bold text-center">CiviCRM and Integrations</h2>
+            <p class="mt-6 text-lg text-center max-w-2xl mx-auto">CiviCRM is an open-source, web-based CRM software designed for non-profit and civic sector organizations. It helps organizations manage contacts, track relationships, handle donations, manage events, send emails, and more. Below are some reasons why CiviCRM is beneficial and the integrations we offer.</p>
+            
+            <h3 class="text-2xl font-bold mt-12">Why Use CiviCRM?</h3>
+            <ul class="mt-6 list-disc list-inside text-lg">
+                <li>Centralized Contact Management: Store all contact information in one place.</li>
+                <li>Donation Management: Manage and track donations, pledges, and financial contributions.</li>
+                <li>Event Management: Comprehensive event management capabilities including registration and ticketing.</li>
+                <li>Email Marketing: Create and send targeted email campaigns.</li>
+                <li>Customization and Integration: Open-source platform allows for customization and integration with other systems.</li>
+                <li>Cost-Effective: Free to use, reducing costs for non-profit organizations.</li>
+            </ul>
+
+            <h3 class="text-2xl font-bold mt-12">CiviCRM Integrations We Offer</h3>
+            <ul class="mt-6 list-disc list-inside text-lg">
+                <li>Integration with Content Management Systems (CMS): WordPress, Drupal, Joomla.</li>
+                <li>Email Marketing Integration: Connect with tools like Mailchimp.</li>
+                <li>Payment Gateway Integration: Streamline donation and payment processes.</li>
+                <li>Event Management Tools: Enhance event management capabilities.</li>
+                <li>Custom Reports and Dashboards: Create tailored reports and data visualization.</li>
+            </ul>
         </div>
     </section>
+
 <!-- Bottom Navigation -->
 <nav class="py-6 flex justify-between items-center bg-gray-800 text-white" aria-label="Bottom Navigation">
     <div class="text-xl font-bold">
