--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@
 <body class="font-sans antialiased text-gray-900">
     <!-- Intro Section -->
     <header class="bg-river h-screen flex items-center justify-center text-white">
-        <nav class="absolute top-0 left-0 right-0 p-6 flex justify-between items-center bg-black bg-opacity-50" aria-label="Main Navigation">
+        <nav class="p-6 flex justify-between items-center bg-gray-800 text-white" aria-label="Main Navigation">
             <div class="text-xl font-bold">
                 <img src="https://source.unsplash.com/random/100x100?logo" alt="Logo" class="w-10 h-10 inline-block">
             </div>
             <ul class="flex space-x-6">
-                <li><a href="#home" class="hover:underline" aria-label="Home">Home</a></li>
-                <li><a href="#about" class="hover:underline" aria-label="About Us">About Us</a></li>
-                <li><a href="#work" class="hover:underline" aria-label="Our Work">Our Work</a></li>
-                <li><a href="#prices" class="hover:underline" aria-label="Prices">Prices</a></li>
+                <li><a href="index.html#home" class="hover:underline" aria-label="Home">Home</a></li>
+                <li><a href="index.html#about" class="hover:underline" aria-label="About Us">About Us</a></li>
+                <li><a href="index.html#work" class="hover:underline" aria-label="Our Work">Our Work</a></li>
+                <li><a href="index.html#prices" class="hover:underline" aria-label="Prices">Prices</a></li>
+                <li><a href="civicrm.html" class="hover:underline" aria-label="CiviCRM">CiviCRM</a></li>
                 <li><a href="contact.html" class="hover:underline" aria-label="Contact">Contact</a></li>
             </ul>
         </nav>
@@ -119,18 +120,18 @@
         </div>
     </section>
 
-    <!-- Bottom Navigation -->
-    <nav class="py-6 flex justify-between items-center bg-black bg-opacity-50 text-white" aria-label="Bottom Navigation">
-        <div class="text-xl font-bold">
-            <img src="https://source.unsplash.com/random/100x100?logo" alt="Logo" class="w-10 h-10 inline-block">
-        </div>
-        <ul class="flex space-x-6">
-            <li><a href="#home" class="hover:underline" aria-label="Home">Home</a></li>
-            <li><a href="#about" class="hover:underline" aria-label="About Us">About Us</a></li>
-            <li><a href="#work" class="hover:underline" aria-label="Our Work">Our Work</a></li>
-            <li><a href="#prices" class="hover:underline" aria-label="Prices">Prices</a></li>
-            <li><a href="contact.html" class="hover:underline" aria-label="Contact">Contact</a></li>
-        </ul>
-    </nav>
-</body>
-</html>
+<!-- Bottom Navigation -->
+<nav class="py-6 flex justify-between items-center bg-gray-800 text-white" aria-label="Bottom Navigation">
+    <div class="text-xl font-bold">
+        <img src="https://source.unsplash.com/random/100x100?logo" alt="Logo" class="w-10 h-10 inline-block">
+    </div>
+    <ul class="flex space-x-6">
+        <li><a href="index.html#home" class="hover:underline" aria-label="Home">Home</a></li>
+        <li><a href="index.html#about" class="hover:underline" aria-label="About Us">About Us</a></li>
+        <li><a href="index.html#work" class="hover:underline" aria-label="Our Work">Our Work</a></li>
+        <li><a href="index.html#prices" class="hover:underline" aria-label="Prices">Prices</a></li>
+        <li><a href="civicrm.html" class="hover:underline" aria-label="CiviCRM">CiviCRM</a></li>
+        <li><a href="contact.html" class="hover:underline" aria-label="Contact">Contact</a></li>
+    </ul>
+</nav>
+
