--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body class="font-sans antialiased text-gray-900">
     <!-- Intro Section -->
     <header class="bg-river h-screen flex items-center justify-center text-white">
-        <nav class="p-6 flex justify-between items-center bg-gray-800 text-white" aria-label="Main Navigation">
+        <nav class="fixed top-0 left-0 right-0 p-6 flex justify-between items-center bg-gray-800 text-white" aria-label="Main Navigation">
             <div class="text-xl font-bold">
                 <img src="https://source.unsplash.com/random/100x100?logo" alt="Logo" class="w-10 h-10 inline-block">
             </div>
