--- a/civicrm.html
+++ b/civicrm.html
@@ -18,7 +18,7 @@
 <!-- Navigation -->
 <nav class="p-6 flex justify-between items-center bg-gray-800 text-white" aria-label="Main Navigation">
     <div class="text-xl font-bold">
-        <img src="https://source.unsplash.com/random/100x100?logo" alt="Logo" class="w-10 h-10 inline-block">
+        <img src="media/logo_standin.svg" alt="Logo" class="w-20 h-10 inline-block">
     </div>
     <ul class="flex space-x-6">
         <li><a href="index.html#home" class="hover:underline" aria-label="Home">Home</a></li>
@@ -61,7 +61,7 @@
 <!-- Bottom Navigation -->
 <nav class="py-6 flex justify-between items-center bg-gray-800 text-white" aria-label="Bottom Navigation">
     <div class="text-xl font-bold">
-        <img src="https://source.unsplash.com/random/100x100?logo" alt="Logo" class="w-10 h-10 inline-block">
+        <img src="media/WOMAN.png" alt="Logo" class="w-20 h-10 inline-block">
     </div>
     <ul class="flex space-x-6">
         <li><a href="index.html#home" class="hover:underline" aria-label="Home">Home</a></li>
