--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Your Company Name">
     <style>
         .bg-river {
-            background-image: url('https://source.unsplash.com/random/1920x1080?river');
+            background-image: url('media/pexels-eberhardgross-20629885 2.jpg');
             background-size: cover;
             background-position: center;
         }
@@ -33,7 +33,7 @@
     <header class="bg-river h-screen flex items-center justify-center text-white">
         <nav class="fixed top-0 left-0 right-0 p-6 flex justify-between items-center bg-gray-800 text-white" aria-label="Main Navigation">
             <div class="text-xl font-bold">
-                <img src="https://source.unsplash.com/random/100x100?logo" alt="Logo" class="w-10 h-10 inline-block">
+                <img src="media/logo_standin.svg" alt="Logo" class="w-20 h-10 inline-block">
             </div>
             <ul class="flex space-x-6">
                 <li><a href="index.html#home" class="hover:underline" aria-label="Home">Home</a></li>
@@ -62,7 +62,7 @@
     <section class="py-20 bg-gray-100">
         <div class="container mx-auto px-6 text-center">
             <div class="tiffany-shadow inline-block">
-                <img src="https://source.unsplash.com/random/200x200?woman" alt="Grace" class="rounded-full w-48 h-48 object-cover">
+                <img src="media/WOMAN.png" alt="Grace" class="rounded-full w-48 h-48 object-cover">
             </div>
             <h3 class="text-2xl font-bold mt-4">Grace</h3>
             <p class="text-gray-600">Owner/Developer</p>
@@ -123,7 +123,7 @@
 <!-- Bottom Navigation -->
 <nav class="py-6 flex justify-between items-center bg-gray-800 text-white" aria-label="Bottom Navigation">
     <div class="text-xl font-bold">
-        <img src="https://source.unsplash.com/random/100x100?logo" alt="Logo" class="w-10 h-10 inline-block">
+        <img src="media/logo_standin.svg" alt="Logo" class="w-20 h-10 inline-block">
     </div>
     <ul class="flex space-x-6">
         <li><a href="index.html#home" class="hover:underline" aria-label="Home">Home</a></li>
