add logo, simplify design

--- a/civicrm.html
+++ b/civicrm.html
@@ -18,13 +18,12 @@
 <!-- Navigation -->
 <nav class="p-6 flex justify-between items-center bg-gray-800 text-white" aria-label="Main Navigation">
     <div class="text-xl font-bold">
-        <img src="media/logo_standin.svg" alt="Logo" class="w-20 h-10 inline-block">
+        <img src="media/logo.svg" alt="Logo" class="h-10 inline-block">
     </div>
     <ul class="flex space-x-6">
         <li><a href="index.html#home" class="hover:underline" aria-label="Home">Home</a></li>
         <li><a href="index.html#about" class="hover:underline" aria-label="About Us">About Us</a></li>
-        <li><a href="index.html#work" class="hover:underline" aria-label="Our Work">Our Work</a></li>
-        <li><a href="index.html#prices" class="hover:underline" aria-label="Prices">Prices</a></li>
+        <li><a href="index.html#work" class="hover:underline" aria-label="Services">Services</a></li>
         <li><a href="civicrm.html" class="hover:underline" aria-label="CiviCRM">CiviCRM</a></li>
         <li><a href="contact.html" class="hover:underline" aria-label="Contact">Contact</a></li>
     </ul>
@@ -66,8 +65,7 @@
     <ul class="flex space-x-6">
         <li><a href="index.html#home" class="hover:underline" aria-label="Home">Home</a></li>
         <li><a href="index.html#about" class="hover:underline" aria-label="About Us">About Us</a></li>
-        <li><a href="index.html#work" class="hover:underline" aria-label="Our Work">Our Work</a></li>
-        <li><a href="index.html#prices" class="hover:underline" aria-label="Prices">Prices</a></li>
+        <li><a href="index.html#work" class="hover:underline" aria-label="Services">Services</a></li>
         <li><a href="civicrm.html" class="hover:underline" aria-label="CiviCRM">CiviCRM</a></li>
         <li><a href="contact.html" class="hover:underline" aria-label="Contact">Contact</a></li>
     </ul>
