remove menu items that are stupid

--- a/index.html
+++ b/index.html
@@ -55,8 +55,6 @@ nav {
             </div>
             <ul class="flex space-x-6">
                 <li><a href="index.html#home" class="hover:underline" aria-label="Home">Home</a></li>
-                <li><a href="index.html#about" class="hover:underline" aria-label="About Us">About Us</a></li>
-                <li><a href="index.html#work" class="hover:underline" aria-label="Services">Services</a></li>
                 <li><a href="civicrm.html" class="hover:underline" aria-label="CiviCRM">CiviCRM</a></li>
                 <li><a href="contact.html" class="hover:underline" aria-label="Contact">Contact</a></li>
             </ul>
@@ -175,14 +173,9 @@ nav {
 </section>
 
 <!-- Bottom Navigation -->
-<nav class="py-6 flex justify-between items-center bg-gray-800 text-white" aria-label="Bottom Navigation">
-    <div class="text-xl font-bold">
-        <img src="media/logo.svg" alt="Logo" class="h-10 inline-block">
-    </div>
+<nav class="p-6 flex justify-between items-center bg-gray-800 text-white" aria-label="Bottom Navigation">
     <ul class="flex space-x-6">
         <li><a href="index.html#home" class="hover:underline" aria-label="Home">Home</a></li>
-        <li><a href="index.html#about" class="hover:underline" aria-label="About Us">About Us</a></li>
-        <li><a href="index.html#work" class="hover:underline" aria-label="Services">Services</a></li>
         <li><a href="civicrm.html" class="hover:underline" aria-label="CiviCRM">CiviCRM</a></li>
         <li><a href="contact.html" class="hover:underline" aria-label="Contact">Contact</a></li>
     </ul>
