--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     <section id="contact" class="py-20 bg-gray-100">
         <div class="container mx-auto px-6">
             <h2 class="text-4xl font-bold text-center">Contact Us</h2>
-            <form class="mt-12 max-w-xl mx-auto">
+            <form class="mt-12 max-w-xl mx-auto" netlify>
                 <div class="mb-6">
                     <label for="name" class="block mb-2 text-sm font-medium text-gray-700">Name</label>
                     <input type="text" id="name" class="w-full p-3 border border-gray-300 rounded-lg" required>
