--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@ nav {
                     <li>Track donations and analyze giving patterns with ease</li>
                     <li>Create personalized fundraising campaigns</li>
                     <li>Build stronger relationships with supporters</li>
-                    <li>Optimize your fundraising efforts</li>
                   </ul>
                 </dd>
               </div>
@@ -122,10 +121,9 @@ nav {
                 </dt>
                 <dd class="mt-2 text-base leading-7 text-gray-600">
                   <ul class="list-disc pl-5">
-                    <li>Seamlessly organize and promote events, from small meetings to large fundraisers</li>
-                    <li>Streamline registration and ticketing processes</li>
-                    <li>Enhance attendee communication</li>
-                    <li>Focus on creating impactful experiences</li>
+                    <li>Plan in person and digital events</li>
+                    <li>Invite and track attendees</li>
+                    <li>Stay in touch with your people</li>
                   </ul>
                 </dd>
               </div>
@@ -140,10 +138,9 @@ nav {
                 </dt>
                 <dd class="mt-2 text-base leading-7 text-gray-600">
                   <ul class="list-disc pl-5">
-                    <li>Efficiently recruit, schedule, and manage volunteers</li>
+                    <li>Keep track of the people who support your mission</li>
                     <li>Match volunteer skills with organizational needs</li>
-                    <li>Track volunteer hours</li>
-                    <li>Enhance your organization's capacity</li>
+                    <li></li>
                   </ul>
                 </dd>
               </div>
