--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,9 @@
         nav a:hover {
             text-decoration: underline;
         }
+        .tiffany {
+            background-color: #0ABAB5;
+        }
     </style>
 </head>
 <body class="font-sans antialiased text-gray-900">
@@ -33,18 +36,22 @@
             <h2 class="text-4xl font-bold text-center">Contact Us</h2>
             <form class="mt-12 max-w-xl mx-auto" netlify>
                 <div class="mb-6">
-                    <label for="name" class="block mb-2 text-sm font-medium text-gray-700">Name</label>
+                    <label for="name" class="block mb-2 text-sm font-medium text-gray-700">Name*</label>
                     <input type="text" id="name" class="w-full p-3 border border-gray-300 rounded-lg" required>
                 </div>
                 <div class="mb-6">
-                    <label for="email" class="block mb-2 text-sm font-medium text-gray-700">Email</label>
+                    <label for="business" class="block mb-2 text-sm font-medium text-gray-700">Business</label>
+                    <input type="text" id="name" class="w-full p-3 border border-gray-300 rounded-lg">
+                </div>
+                <div class="mb-6">
+                    <label for="email" class="block mb-2 text-sm font-medium text-gray-700">Email*</label>
                     <input type="email" id="email" class="w-full p-3 border border-gray-300 rounded-lg" required>
                 </div>
                 <div class="mb-6">
-                    <label for="message" class="block mb-2 text-sm font-medium text-gray-700">Message</label>
+                    <label for="message" class="block mb-2 text-sm font-medium text-gray-700">How can I help you?*</label>
                     <textarea id="message" class="w-full p-3 border border-gray-300 rounded-lg" rows="5" required></textarea>
                 </div>
-                <button type="submit" class="w-full p-3 bg-blue-600 text-white rounded-lg">Send Message</button>
+                <button type="submit" class="w-full p-3 tiffany text-white rounded-lg">Get in touch</button>
             </form>
         </div>
     </section>
