--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,11 @@
         <div class="container mx-auto px-6">
             <h2 class="text-4xl font-bold text-center">Contact Us</h2>
             <form class="mt-12 max-w-xl mx-auto" netlify>
+                <p class="hidden">
+                    <label>
+                      Don’t fill this out if you’re human: <input name="bot-field" />
+                    </label>
+                  </p>
                 <div class="mb-6">
                     <label for="name" class="block mb-2 text-sm font-medium text-gray-700">Name*</label>
                     <input type="text" id="name" class="w-full p-3 border border-gray-300 rounded-lg" required>
