--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     <section id="contact" class="py-20 bg-gray-100">
         <div class="container mx-auto px-6">
             <h2 class="text-4xl font-bold text-center">Contact Us</h2>
-            <form class="mt-12 max-w-xl mx-auto" netlify>
+            <form class="mt-12 max-w-xl mx-auto" netlify-honeypot="bot-field" data-netlify="true">
                 <p class="hidden">
                     <label>
                       Don’t fill this out if you’re human: <input name="bot-field" />
