--- a/contact.html
+++ b/contact.html
@@ -41,19 +41,19 @@
                     </label>
                   </p>
                 <div class="mb-6">
-                    <label for="name" class="block mb-2 text-sm font-medium text-gray-700">Name*</label>
+                    <label name="name" for="name" class="block mb-2 text-sm font-medium text-gray-700">Name*</label>
                     <input type="text" id="name" class="w-full p-3 border border-gray-300 rounded-lg" required>
                 </div>
                 <div class="mb-6">
-                    <label for="business" class="block mb-2 text-sm font-medium text-gray-700">Business</label>
+                    <label name="business" for="business" class="block mb-2 text-sm font-medium text-gray-700">Business</label>
                     <input type="text" id="name" class="w-full p-3 border border-gray-300 rounded-lg">
                 </div>
                 <div class="mb-6">
-                    <label for="email" class="block mb-2 text-sm font-medium text-gray-700">Email*</label>
+                    <label name="email" for="email" class="block mb-2 text-sm font-medium text-gray-700">Email*</label>
                     <input type="email" id="email" class="w-full p-3 border border-gray-300 rounded-lg" required>
                 </div>
                 <div class="mb-6">
-                    <label for="message" class="block mb-2 text-sm font-medium text-gray-700">How can I help you?*</label>
+                    <label name="message" for="message" class="block mb-2 text-sm font-medium text-gray-700">How can I help you?*</label>
                     <textarea id="message" class="w-full p-3 border border-gray-300 rounded-lg" rows="5" required></textarea>
                 </div>
                 <button type="submit" class="w-full p-3 tiffany text-white rounded-lg">Get in touch</button>
