--- a/contact.html
+++ b/contact.html
@@ -39,27 +39,28 @@
                     <label>
                       Don’t fill this out if you’re human: <input name="bot-field" />
                     </label>
-                  </p>
+                </p>
                 <div class="mb-6">
-                    <label name="name" for="name" class="block mb-2 text-sm font-medium text-gray-700">Name*</label>
-                    <input type="text" id="name" class="w-full p-3 border border-gray-300 rounded-lg" required>
+                    <label for="name" class="block mb-2 text-sm font-medium text-gray-700">Name*</label>
+                    <input type="text" id="name" name="name" class="w-full p-3 border border-gray-300 rounded-lg" required>
                 </div>
                 <div class="mb-6">
-                    <label name="business" for="business" class="block mb-2 text-sm font-medium text-gray-700">Business</label>
-                    <input type="text" id="name" class="w-full p-3 border border-gray-300 rounded-lg">
+                    <label for="business" class="block mb-2 text-sm font-medium text-gray-700">Business</label>
+                    <input type="text" id="business" name="business" class="w-full p-3 border border-gray-300 rounded-lg">
                 </div>
                 <div class="mb-6">
-                    <label name="email" for="email" class="block mb-2 text-sm font-medium text-gray-700">Email*</label>
-                    <input type="email" id="email" class="w-full p-3 border border-gray-300 rounded-lg" required>
+                    <label for="email" class="block mb-2 text-sm font-medium text-gray-700">Email*</label>
+                    <input type="email" id="email" name="email" class="w-full p-3 border border-gray-300 rounded-lg" required>
                 </div>
                 <div class="mb-6">
-                    <label name="message" for="message" class="block mb-2 text-sm font-medium text-gray-700">How can I help you?*</label>
-                    <textarea id="message" class="w-full p-3 border border-gray-300 rounded-lg" rows="5" required></textarea>
+                    <label for="message" class="block mb-2 text-sm font-medium text-gray-700">How can I help you?*</label>
+                    <textarea id="message" name="message" class="w-full p-3 border border-gray-300 rounded-lg" rows="5" required></textarea>
                 </div>
                 <button type="submit" class="w-full p-3 tiffany text-white rounded-lg">Get in touch</button>
             </form>
         </div>
     </section>
+    
 <!-- Bottom Navigation -->
 <nav class="p-6 flex justify-between items-center bg-gray-800 text-white" aria-label="Bottom Navigation">
     <ul class="flex space-x-6">
